# sentinel-edr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.md  akesoedr.conf  sentinel.conf
akesoedr-agent/: CMakeLists.txt  cmd_handler.cpp  cmd_handler.h  config.cpp  config.h  event_processor.cpp  event_processor.h  json_writer.cpp  json_writer.h  main.cpp  network_table.cpp  network_table.h  pipeline.cpp  pipeline.h  process_table.cpp  process_table.h  service.cpp  service.h
akesoedr-agent/amsi/: amsi_register.cpp  amsi_register.h
akesoedr-agent/etw/: etw_consumer.cpp  etw_consumer.h  provider_amsi.cpp  provider_amsi.h  provider_dns.cpp  provider_dns.h  provider_dotnet.cpp  provider_dotnet.h  provider_kerberos.cpp  provider_kerberos.h  provider_kernelprocess.cpp  provider_kernelprocess.h  provider_powershell.cpp  provider_powershell.h  provider_rpc.cpp  provider_rpc.h
akesoedr-agent/output/: siem_serializer.cpp  siem_serializer.h  siem_writer.cpp  siem_writer.h
akesoedr-agent/rules/: rule_engine.cpp  rule_engine.h  rule_parser.cpp  rule_parser.h  rule_types.h  rule_validator.cpp  rule_validator.h  sequence_engine.cpp  sequence_engine.h  threshold_engine.cpp  threshold_engine.h
akesoedr-agent/scanner/: av_scanner.cpp  av_scanner.h  memory_scanner.cpp  memory_scanner.h  onaccess_scanner.cpp  onaccess_scanner.h  yara_scanner.cpp  yara_scanner.h
akesoedr-amsi/: CMakeLists.txt  akesoedr-amsi.def  amsi_provider.cpp  amsi_provider.h  amsi_signatures.txt  dllmain.cpp
akesoedr-cli/: CMakeLists.txt  main.cpp
akesoedr-drv/: CMakeLists.txt  callbacks_imageload.c  callbacks_imageload.h  callbacks_object.c  callbacks_object.h  callbacks_process.c  callbacks_process.h  callbacks_registry.c  callbacks_registry.h  callbacks_thread.c  callbacks_thread.h  comms.c  comms.h  file_hash.c  file_hash.h  kapc_inject.c  kapc_inject.h  main.c  minifilter.c  minifilter.h  minifilter_pipes.c  minifilter_pipes.h  wfp_callout.c  wfp_callout.h
akesoedr-hook/: CMakeLists.txt  hook_engine.c  hook_engine.h  hooks_common.c  hooks_common.h  hooks_memory.c  hooks_pipe.c  hooks_process.c  hooks_section.c  hooks_thread.c  main.c  pipe_client.c  pipe_client.h
common/: constants.h  ipc.h  ipc_serialize.h  telemetry.h
docs/: test_report.md
rules/: ch13_attack_chain.yaml  excel_cmd_spawn.yaml  hook_alloc_rwx.yaml  hook_remote_thread.yaml  lsass_handle_spam.yaml
scripts/: hook_diag_test.cpp  install-driver.ps1  setup-testsigning.ps1  shellcode_test.cpp  uninstall-driver.ps1
sentinel-agent/: CMakeLists.txt  cmd_handler.cpp  cmd_handler.h  config.cpp  config.h  event_processor.cpp  event_processor.h  json_writer.cpp  json_writer.h  main.cpp  pipeline.cpp  pipeline.h  process_table.cpp  process_table.h  service.h
sentinel-agent/amsi/: amsi_register.cpp  amsi_register.h
sentinel-agent/rules/: rule_engine.cpp  rule_engine.h  rule_parser.cpp  rule_parser.h  rule_types.h  rule_validator.cpp  rule_validator.h  threshold_engine.cpp  threshold_engine.h
sentinel-agent/scanner/: yara_scanner.cpp  yara_scanner.h
sentinel-amsi/: CMakeLists.txt  amsi_provider.cpp  amsi_provider.h  amsi_signatures.txt  dllmain.cpp  sentinel-amsi.def
sentinel-cli/: main.cpp
sentinel-drv/: CMakeLists.txt  callbacks_imageload.c  callbacks_imageload.h  callbacks_object.c  callbacks_object.h  callbacks_process.c  callbacks_process.h  callbacks_registry.c  callbacks_thread.c  callbacks_thread.h  comms.c  file_hash.c  kapc_inject.c  kapc_inject.h  main.c  minifilter.c  minifilter.h  minifilter_pipes.c  wfp_callout.c  wfp_callout.h
sentinel-hook/: CMakeLists.txt  hook_engine.c  hook_engine.h  hooks_common.c  hooks_common.h  hooks_memory.c  hooks_process.c  hooks_section.c  hooks_thread.c  main.c  pipe_client.c  pipe_client.h
tests/: CMakeLists.txt  test_consumer.c  test_ipc_roundtrip.c
tests/integration/: attack_chain.ps1
tests/payloads/: calc_shellcode.h  test_memscan.cpp  test_xll.cpp  test_xll.def
yara-rules/: cobaltstrike_beacon.yar  mimikatz.yar  suspicious_pe.yar  upx_packed.yar  xll_shellcode.yar
